--- a/pom.xml
+++ b/pom.xml
@@ -494,6 +494,26 @@
             <version>3.10-FINAL</version>
         </dependency>
         <!-- poi 结束 -->
+        <!-- xss -->
+        <!-- https://mvnrepository.com/artifact/org.owasp.esapi/esapi -->
+        <!--<dependency>-->
+            <!--<groupId>org.owasp.esapi</groupId>-->
+            <!--<artifactId>esapi</artifactId>-->
+            <!--<version>2.1.0</version>-->
+        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.owasp.esapi/esapi -->
+        <!--<dependency>-->
+            <!--<groupId>org.owasp.esapi</groupId>-->
+            <!--<artifactId>esapi</artifactId>-->
+            <!--<version>2.0.1</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>net.sourceforge.cssparser</groupId>
+            <artifactId>cssparser</artifactId>
+            <version>0.9.20</version>
+        </dependency>
+
+        <!-- xss 结束-->
         <!-- 定时开始 -->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
